# Challenge-Promtior

./: .dockerignore  .gitignore  Dockerfile  README.MD  README.md  api.py  process.md  pyproject.toml
data/: data_extraction.py
data/documents_refined/: document0.txt  document1.txt  document2.txt  document3.txt  document4.txt  document5.txt  document6.txt  presentation.txt
data/documents_scrappy/: document0.txt  document1.txt  document2.txt  document3.txt  document4.txt  document5.txt  document6.txt
data/faiss_store/: index.faiss
data/faiss_store/intfloat__multilingual-e5-large/: index.faiss
data/faiss_store/qwen__qwen3-embedding-0.6b/: index.faiss  meta.json
data/faiss_store/text-embedding-3-large/: index.faiss
data/faiss_store/text-embedding-3-small/: index.faiss
doc/: documentation.md  process.md
frontend/: app.js  evaluation.css  evaluation.html  evaluation.js  index.html  styles.css
rag/: chain.py  config.py  embeddings.py  retriever.py  store.py
testing/: evaluator.py  preguntas.csv  questions.csv
